--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -52,10 +52,13 @@ h1,h2,h3,h4{
   min-height: 100%;
 }
 .landingback{
+  /* background-image: url('/assets/staticimg/final3.gif');
+  background-repeat: no-repeat;
+  width: 100%;
+  background-size: cover; */
   position: absolute;
   bottom: 0;
   top: 0;
-
   color: #f1f1f1;
   width: 100%;
   padding: 20px;
@@ -481,6 +484,32 @@ h1,h2,h3,h4{
   margin-top: 3%;
   opacity: 1;
   transform: translateX(0px);
+}
+.imagessection{
+  width: 100%;
+  display: block;
+  overflow: auto;
+}
+.imagesproperty{
+  float: left;
+  margin-left: 4%;
+  width: 40%;
+  min-height: 250px;
+  min-height: 320px;
+  opacity: 0;
+  transition: all 2s ease;
+}
+.imagesproperty.active{
+  float: left;
+  margin-left: 4%;
+  width: 40%;
+  min-height: 250px;
+  min-height: 320px;
+  opacity: 1;
+}
+.extraimages{
+  width: 100%;
+  height: 300px;
 }
 .abouthousetitle{
   font-size: 20px;
