--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -54,9 +54,10 @@ h1,h2,h3,h4{
 
 
 .landingback{
-  /* background-image: url('/assets/staticimg/final3.gif');
+  /* background-image: url('/assets/staticimg/newgif.gif');
   background-repeat: no-repeat;
   width: 100%;
+  height: 100vh;
   background-size: cover; */
   position: absolute;
   bottom: 0;
@@ -386,7 +387,8 @@ h1,h2,h3,h4{
 }
 /* carousel */
 .carouselimg{
-  height: 60vh;
+  height: 80vh;
+  opacity: 0.6;
 }
 /* footer code */
 #footer{
@@ -429,12 +431,25 @@ h1,h2,h3,h4{
   border-bottom-style: groove;
   background-color: #FFB673;
 }
+.social_links{
+  color: #000000;
+  text-decoration: none;
+}
 /* about us page */
+.imagesectionabout{
+  background-image: url('/assets/staticimg/opthouse1.jpg');
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 90%;
+  margin-bottom: 4%;
+  background-size: cover;
+
+}
 .aboutustext{
   min-width: 250px;
 }
 .mainabout{
-  width: 85%;
+  width: 88%;
   margin-left: 12%;
   margin-top: 150px;
   margin-bottom: 150px;
@@ -460,9 +475,9 @@ h1,h2,h3,h4{
   transform: translateX(0px);
 }
 .aboutgertlerheader{
-  margin-left: 5%;
+  margin-left: 4%;
   font-family: 'Montesserat', serif;
-  width: 300px;
+  width: 200px;
 }
 .aboutinfo{
   width: 40%;
@@ -522,16 +537,18 @@ h1,h2,h3,h4{
 
 }
 .filtersection{
-  background-color:  #2c2c2c;
+  background-color:   #FFB673;
   display: block;
+  padding: 2%;
   overflow: auto;
+
 }
 .filteroptions>ul{
   width: 100%;
 }
 .filterform{
   padding-top: 4%;
-  background-color: #2c2c2c;
+  background-color: #FFB673;
 }
 .filterinputs{
    max-width: 200px;
@@ -541,24 +558,19 @@ h1,h2,h3,h4{
 #formrent{
   margin: 2%;
 }
-.actualform{
-  /* padding-top: 1%;
-  padding-bottom: 1%; */
-  background-color: rgb(54, 54, 54);
-}
 .buttongoproduct{
   border-radius: 0.1rem;
   height: 50px;
   width: 80px;
 }
 .filtersbutton{
-  background-color: #FFB673;
+  background-color: #131313;
   border-radius: 0rem;
-  color: #011b18;
+  color: #ffffff;
 
 }
 .filtersbutton:hover{
-  background-color:#011b18;
+  background-color:#3b3b3b;
   color: whitesmoke;
 }
 /* houseviewpage */
