--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -224,15 +224,17 @@ h1,h2,h3,h4{
   overflow: auto;
   display: block;
   height: max-content;
+  margin-top: 6%;
 }
 
 .houseiconsdetails{
   border-right: 1px solid lightgray;
   width: 77px;
+  height: 80px;
   padding-right: 3px;
   margin-bottom: 5%;
   float: left;
-  margin-left: 3%;
+  margin-left: 1%;
 
 }
 .valuehomeicon{
@@ -526,6 +528,7 @@ h1,h2,h3,h4{
   background-color: #fafafa;
 }
 .housedetailsect{
+  padding-left: 5%;
   width: 100%;
   overflow: auto;
   display: block;
@@ -657,7 +660,20 @@ h1,h2,h3,h4{
 }
 .extraimages{
   width: 100%;
+  min-width: 300px;
   height: 300px;
+}
+.extraimages:hover{
+  width: 100%;
+  height: 100%;
+}
+.exprop{
+  transition: all 0.4s ease;
+}
+.exprop:hover{
+  width: 100%;
+  height: 500px;
+
 }
 .abouthousetitle{
   font-size: 20px;
