--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -575,7 +575,7 @@ h1,h2,h3,h4{
 .buttongoproduct{
   border-radius: 0.1rem;
   height: 50px;
-  width: 80px;
+  width: fit-content;
 }
 .filtersbutton{
   background-color: #131313;
