--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -26,7 +26,7 @@ h1,h2,h3,h4{
 /* navbar2 */
 .clientnav{
   /* background-color: #FFB673; */
-  background-color: white;
+  background-color: #FFB673;
 }
 .navlinko{
   font-family: 'Cormorant Garamond', serif;
@@ -250,7 +250,7 @@ h1,h2,h3,h4{
 .fas.fa-shower{
   position: absolute;
   top:30%;
-  right: 30%;
+  right: 3%;
 }
 .fas.fa-ruler-combined{
   position: absolute;
@@ -260,7 +260,7 @@ h1,h2,h3,h4{
 .fas.fa-mountain{
   position: absolute;
   top:30%;
-  right: 30%;
+  right: 3%;
 }
 .far.fa-building{
   position: absolute;
