--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -471,14 +471,16 @@ h1,h2,h3,h4{
   margin-bottom: 4%;
   opacity: 0;
   transition: all 1.5s ease;
-  transform: translatey(100px);
+  transform: translateY(100px);
 }
 .aboutgertler.active{
   width: 100%;
   display:block;
   overflow: auto;
+  min-width: 250px;
+  margin-bottom: 4%;
   opacity: 1;
-  transform: translateX(0px);
+  transform: translateY(0px);
 }
 .aboutgertlerheader{
   margin-left: 4%;
