--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -1,6 +1,6 @@
 body{
   font-family: 'Cormorant Garamond', serif;
-  font-size: 17px;
+  font-size: 19px;
 }
 h1,h2,h3,h4{
   font-family: "Montesserat", serif;
@@ -289,8 +289,8 @@ h1,h2,h3,h4{
 .services{
   background-color:white;
   /* border-radius: 50%; */
-  border-bottom-left-radius: 40%;
-  border-top-right-radius: 40%;
+  border-bottom-left-radius: 34%;
+  border-top-right-radius: 34%;
   width:29%;
   text-align: justify;
   text-justify: inter-word;
@@ -309,8 +309,8 @@ h1,h2,h3,h4{
 .services.active{
   background-color:white;
   /* border-radius: 50%; */
-  border-bottom-left-radius: 40%;
-  border-top-right-radius: 40%;
+  border-bottom-left-radius: 34%;
+  border-top-right-radius: 34%;
   width:29%;
   min-width: 320px;
   height: 70vh;
@@ -353,6 +353,7 @@ h1,h2,h3,h4{
   overflow: auto;
   background-color: #e9e9e9;
   opacity: 0;
+  margin-bottom: 3%;
   transition: all 2.3s ease;
 }
 .trustus.active{
@@ -362,6 +363,8 @@ h1,h2,h3,h4{
   overflow: auto;
   background-color: #e9e9e9;
   opacity: 1;
+  margin-bottom: 3%;
+
 }
 .trustusection{
   padding-top: 9%;
@@ -369,10 +372,11 @@ h1,h2,h3,h4{
   min-width: 320px;
   padding-left: 2%;
   padding-right: 2%;
+  padding-bottom: 9%;
   float: left;
   border-left: 1px solid rgb(177, 177, 177);
   border-top:1px solid rgb(177, 177, 177) ;
-  height: 70vh;
+  height: fit-content;
   opacity: 0;
   transition: all 2.3s ease;
   transform: translateY(100px);
@@ -383,10 +387,11 @@ h1,h2,h3,h4{
   min-width: 320px;
   padding-left: 2%;
   padding-right: 2%;
+  padding-bottom: 9%;
   float: left;
   border-left: 1px solid rgb(177, 177, 177);
   border-top:1px solid rgb(177, 177, 177) ;
-  height: 70vh;
+  height: fit-content;
   opacity: 1;
   transform: translateY(0px);
 }
@@ -498,7 +503,7 @@ h1,h2,h3,h4{
 }
 .founderlarge{
   position: absolute;
-  top:50%;
+  top:65%;
   right:0%;
 }
 /* houselist */
