--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -443,9 +443,14 @@ h1,h2,h3,h4{
   top:30%;
   right: 30%;
 }
+/* parallax */
+.parallex_wrapper{
+  margin: 0;
+  padding: 0;
+}
 .servicesoffered{
-  background-image: url(/assets/staticimg/homehid2.jpg);
   background-size: cover;
+  background-position: center;
   display: block;
   overflow: auto;
   width: 100%;
@@ -454,7 +459,6 @@ h1,h2,h3,h4{
   transition: all 1.3s ease;
 }
 .servicesoffered.active{
-  background-image: url(/assets/staticimg/homehid2.jpg);
   background-size: cover;
   display: block;
   overflow: auto;
@@ -462,38 +466,44 @@ h1,h2,h3,h4{
   width: 100%;
   opacity: 1;
 }
+.services_gil{
+  background-image: url(/assets/staticimg/outside_house.jpg);
+  background-size: cover;
+  display: block;
+  overflow: auto;
+  padding-left: 3%;
+  width: 100%;
+  opacity: 1;
+  background-attachment: fixed;
+}
 .services{
-  background-color:white;
-  /* border-radius: 50%; */
+  background-color:rgba(244,159,40,0.7) ;
   border-bottom-left-radius: 34%;
   border-top-right-radius: 34%;
   width:29%;
   text-align: justify;
   text-justify: inter-word;
   min-width: 320px;
-  height: 70vh;
   display: block;
   overflow: auto;
   margin:2%;
-  color: #141414;
+  color: #011B18;
   margin-top: 4%;
   opacity: 0;
-  transition: all 2.3s ease;
+  transition: all 1.8s ease;
   transform: translateY(-100px);
   
 }
 .services.active{
-  background-color:white;
-  /* border-radius: 50%; */
+  background-color:rgba(255,255,255,0.7) ;
   border-bottom-left-radius: 34%;
   border-top-right-radius: 34%;
   width:29%;
   min-width: 320px;
-  height: 70vh;
   display: block;
   overflow: auto;
   margin: 2%;
-  color: #141414;
+  color: #011B18;
   margin-top: 10%;
   margin-bottom: 10%;
   opacity: 1;
@@ -505,6 +515,19 @@ h1,h2,h3,h4{
   padding-top: 15%;
   padding-left: 15%;
 }
+
+.our_valuesgil{
+  background-image: url(/assets/staticimg/stairs.jpg);
+  background-size: cover;
+  display: block;
+  overflow: auto;
+  padding-left: 3%;
+  width: 100%;
+  opacity: 1;
+  background-attachment: fixed;
+
+}
+
 .whywork{
   width:92%;
   height: 20vh;
@@ -522,52 +545,50 @@ h1,h2,h3,h4{
   opacity: 1;
   transform: translateX(0px);
 }
-.trustus{
+/* .trustus{
   width: 100%;
   padding-left: 3%;
   display: block;
   overflow: auto;
-  background-color: #e9e9e9;
+  background-color: #011B18;
   opacity: 0;
   margin-bottom: 3%;
-  transition: all 2.3s ease;
-}
-.trustus.active{
-  width: 100%;
-  padding-left: 3%;
-  display: block;
-  overflow: auto;
-  background-color: #e9e9e9;
+  transition: all 1.8s ease;
+
+} */
+.trustus{
   opacity: 1;
   margin-bottom: 3%;
+  padding-top: 4%;
+  padding-bottom: 10%;
 
 }
 .trustusection{
-  padding-top: 9%;
-  width: 33%;
+  width: 28%;
   min-width: 320px;
+  padding-top: 6%;
   padding-left: 2%;
   padding-right: 2%;
-  padding-bottom: 9%;
+  padding-bottom: 6%;
+  margin:2%;
   float: left;
-  border-left: 1px solid rgb(177, 177, 177);
-  border-top:1px solid rgb(177, 177, 177) ;
-  height: fit-content;
   opacity: 0;
   transition: all 2.3s ease;
   transform: translateY(100px);
 }
 .trustusection.active{
-  padding-top: 9%;
-  width: 33%;
-  min-width: 320px;
+  width: 28%;
+  min-width: 330px;
+  padding-top: 6%;
   padding-left: 2%;
   padding-right: 2%;
-  padding-bottom: 9%;
+  padding-bottom: 6%;
+  margin:2%;
+
   float: left;
-  border-left: 1px solid rgb(177, 177, 177);
-  border-top:1px solid rgb(177, 177, 177) ;
-  height: fit-content;
+  border-radius: 40%;
+  background-color: rgba(1, 27, 24,0.9);
+  color: #F49F28;
   opacity: 1;
   transform: translateY(0px);
 }
@@ -638,8 +659,27 @@ h1,h2,h3,h4{
 }
 .btnviewall_blogs{
   width: 100%;
-  display: block;
   overflow: auto;
+}
+.blog_small_button{
+  width: 100%;
+  padding: 2%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.viewalllistings_blogs_sm{
+  border: 1px solid #F49F28;
+  padding: 10px;
+  background-color:#F49F28;
+  color:#011B18;
+  transition: all 1s ease;
+}
+.viewalllistings_blogs_sm:hover{
+  border: 1px solid #011B18;
+  padding: 10px;
+  background-color:#011B18;
+  color: #F49F28;
 }
 .viewalllistings_blogs{
   float: right;
@@ -659,9 +699,23 @@ h1,h2,h3,h4{
 }
 
 /* carousel */
+
+.clients_feedback{
+  background-image: url(/assets/staticimg/interior7.jpg);
+  background-size: cover;
+  display: block;
+  overflow: auto;
+  width: 100%;
+  opacity: 1;
+  background-attachment: fixed;
+
+}
 .carouselimg{
-  height: 80vh;
-  opacity: 0.6;
+  height: 60vh;
+  opacity: 0.3;
+}
+.carousel-caption{
+  margin-top: 5%;
 }
 /* footer code */
 #footer{
