--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -373,7 +373,7 @@ h1,h2,h3,h4{
   /* font-family: 'Alegreya Sans', sans-serif; */
   font-family: 'Crimson Pro', serif;
   /* font-family: 'Spectral', serif; */
-  font-weight: 500;
+  font-weight: 400;
 }
 .viewalllistings{
   margin-top: 3%;
@@ -660,6 +660,13 @@ h1,h2,h3,h4{
 .btnviewall_blogs{
   width: 100%;
   overflow: auto;
+}
+@media(min-width: 980px
+){
+  .whyblog_sect{
+    margin-bottom: 2%;
+  }
+
 }
 .blog_small_button{
   width: 100%;
