--- a/public/frontend/css/blogs.css
+++ b/public/frontend/css/blogs.css
@@ -4,42 +4,57 @@ font-size: 19px;
 }
 
 
+
 /* navbar1 */
 .navlinkohid{
-font-family: 'Cormorant Garamond', serif;
-color: rgb(39, 39, 39);
-text-transform: capitalize;
-font-weight: bolder;
-font-size: 20px;
-}
-.nav-item:hover{
-background-color: #011b18;
-color: #f77e0c;
-border-radius: 0.4rem;
-}
-.nav-item:hover>a{
-color: white;
-}
-/* navbar2 */
-.clientnav{
-/* background-color: #FFB673; */
-background-color: #FFB673;
-}
-.navlinko{
-font-family: 'Cormorant Garamond', serif;
-color: rgb(1, 0, 24);
-text-transform: capitalize;
-font-weight: bolder;
-font-size: 20px;
-}
-.nav-item:hover{
-background-color: #011b18;
-color: #f77e0c;
-border-radius: 0.4rem;
-}
-.nav-item:hover>a{
-color: white;
-}
+    font-family: 'Cormorant Garamond', serif;
+    color: rgb(39, 39, 39);
+    text-transform: capitalize;
+    font-weight: bolder;
+    font-size: 20px;
+  }
+  .nav-item:hover{
+    background-color: #011b18;
+    color: #f77e0c;
+    border-radius: 0.4rem;
+  }
+  .nav-item:hover>a{
+    color: white;
+  }
+  .gertler-logo{
+    max-width: 100px;
+    min-width: 80px;
+    max-height: 100px;
+    max-height: 80px;
+  }
+  /* navbar2 */
+  .clientnav{
+    /* background-color: #FFB673; */
+    background-color: #011B18;
+  }
+  .navbar-toggler{
+    border: 1px solid #F49F28;
+  }
+  .navbar-toggler-icon{
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(244, 159, 40, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  }
+  .navlinko{
+    font-family: 'Cormorant Garamond', serif;
+    color: #F49F28;
+    text-transform: capitalize;
+    font-weight: bolder;
+    font-size: 18px;
+  
+  }
+  .nav-item:hover{
+    background-color: #011b18;
+    color: #f77e0c;
+    border-radius: 0.4rem;
+    border-bottom: 1px whitesmoke solid;
+  }
+  .nav-item:hover>a{
+    color: white;
+  }
 /* landing section/homepage body */
 #myVideo {
 position: relative;
@@ -51,11 +66,10 @@ min-height: 100%;
 
 /* footer code */
 #footer{
-
 font-family: 'Vollkorn', serif;
 display:grid;
 justify-content: center;
-background-color: #FFB673;
+background-color: #011B18;
 position: sticky;
 top: 100%;
 margin-top: 0%;
@@ -63,7 +77,7 @@ padding-top: 20px;
 
 }
 .footerinfo{
-color: black;
+color: #F49F28;
 float: left;
 padding-left: 30px;
 padding-right: 30px;
@@ -78,7 +92,10 @@ list-style: none;
 }
 .pagelinks{
 text-decoration: none;
-color: black;
+color: #F49F28;
+}
+.pagelinks:hover{
+color: whitesmoke;
 }
 .footerlinks{
 padding-top: 15px;
@@ -88,58 +105,100 @@ border-top-style: hidden;
 border-right-style: hidden;
 border-left-style: hidden;
 border-bottom-style: groove;
-background-color: #FFB673;
+background-color: #011B18;
+color: whitesmoke;
 }
+.footer_signupbtn{
+background-color:#F49F28;
+    color:#011B18;
+}
+.footer_signupbtn:hover{
+color:#011B18;
+background-color: whitesmoke;
+border: 1px whitesmoke solid;
+}
+
 .social_links{
-color: #000000;
+color: #F49F28;
 text-decoration: none;
 }
+.social_links:hover{
+color: whitesmoke;
+}
+/* blog body */
 .blogbody{
-margin-top: 200px;
-width: 84%;
-margin-left: 8%;
+margin-top: 80px;
+width: 100%;
+}
+.blogimage{
+    position: relative;
 }
 .blogheader{
-    /* font-family: 'Cormorant Garamond', serif; */
-    /* font-family: 'Lexend Deca', sans-serif; */
-    font-family: 'Lobster', cursive;
-    /* font-family: 'Lobster Two', cursive; */
-    /* font-family: 'Lora', serif; */
-    /* font-family: 'Merriweather', serif; */
-    /* font-family: 'Open Sans', sans-serif; */
-    /* font-family: 'Ubuntu', sans-serif; */
+
+/* font-family: 'Lobster', cursive; */
+font-family: 'Crimson Pro', serif;
+}
+@media (min-width: 980px) {
+    .blogheading_back {
+        top: 40%;
+        left: 30%;
+        max-width: 600px;
+    }
+  }
+  
+  @media (max-width: 980px) {
+    .blogheading_back {
+        top: 40%;
+        left: 6%;
+        right: 6%;
+    }
+  }
+.blogheading_back{
+    position: absolute;
+
+    background: linear-gradient(135deg,rgba(255, 255, 255, 0.836)rgba(255,255,255,0));
+    backdrop-filter: blur(50px);
+    -webkit-backdrop-filter: blur(50px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, .3);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,.8);
+    padding-left:10px;
+    padding-right: 10px;
+    z-index: 3;
+    min-height: 100px;
+    min-width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    color: #011b18;
 }
 h1,h2,h3,h4{
-/* font-family: 'Lora', serif; */
-    /* font-family: 'Merriweather', serif; */
-    /* font-family: 'Open Sans', sans-serif; */
-    font-family: 'Ubuntu', sans-serif;
+
+font-family: 'Ubuntu', sans-serif;
 }
 p{
-    /* font-family: 'Lora', serif; */
-    /* font-family: 'Merriweather', serif; */
-    /* font-family: 'Open Sans', sans-serif; */
-    /* font-family: 'Ubuntu', sans-serif; */
-    font-family: 'Cormorant Garamond', serif;
-    /* font-family: 'Lexend Deca', sans-serif; */
-    /* font-family: 'Lobster', cursive; */
-    font-size: 18px;
-    text-indent: 50px;
+font-family: 'Cormorant Garamond', serif;
+font-size: 18px;
+text-indent: 50px;
 
 }
 .blogtext{
-    margin-top: 30px;
-    margin-bottom: 50px;
-}
-/* .btnlink{
-    position: fixed;
-    bottom: 20%;
-    right: 10%;
-    opacity: 0.9;
-}
-.btnlink:hover{
-    opacity: 1;
+margin-top: 30px;
+margin-bottom: 20px;
+max-width: 84;
+margin-left: 8%;
+margin-right: 8%;
+text-align: justify;
+text-justify: inter-word;
 }
 .btnlinkfloat{
-    border-radius: 60%;
-} */
+    background-color: #011B18;
+    border-radius: 0rem;
+    color: #F49F28;
+    transition: all ease 0.6s;
+}
+.btnlinkfloat:hover{
+    background-color: #F49F28;
+    color: #011B18;
+}
