--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -1258,14 +1258,21 @@ text-justify: inter-word;
 }
 
 /* blogs */
-.blogbackground{
-  margin-top: 8%;
-  position: relative;
+
+.bloglanding_background{
+  background-image: url('/assets/staticimg/infinitypool1.jpg');
+  height: 70vh;
   width: 100%;
+  margin-bottom: 4%;
+  background-size: cover;
+  display: block;
+  overflow: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 80px;
 }
 .blogheading{
-  top: 30%;
-  left: 30%;
   z-index: 3;
   max-width: 50%;
   position: absolute;
@@ -1274,14 +1281,27 @@ text-justify: inter-word;
   border-radius: 0.3rem;
 }
 .blogheadingsm{
-  top: 25%;
-  left: 3%;
-  padding-left:10px;
-  padding-right: 10px;
-  z-index: 3;
-  position: absolute;
 
+width: 90%;
 }
 .bloglist{
   width: 100%;
+}
+.blogheader_back{
+  background: linear-gradient(135deg,rgba(255, 255, 255, 0.836)rgba(255,255,255,0));
+  backdrop-filter: blur(50px);
+  -webkit-backdrop-filter: blur(50px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, .3);
+  box-shadow: 0 8px 32px 0 rgba(0,0,0,.8);
+  padding-left:10px;
+  padding-right: 10px;
+  z-index: 3;
+  min-height: 100px;
+  min-width: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 40px;
+  color: #011b18;
 }
