--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -931,6 +931,19 @@ h1,h2,h3,h4{
   color: whitesmoke;
   border-radius: 0.4rem;
 }
+.iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+}
+.iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .imagesectionabout{
   background-image: url('/assets/staticimg/opthouse1.jpg');
   height: 60vh;
